# kiarina-python

./: .env.sample  .gitignore  AGENTS.md  CHANGELOG.md  Makefile  README.ja.md  README.md  docker-compose.yaml  mise.toml  pyproject.toml  vscode.code-workspace
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  dependency-update.yml  release-pypi.yml  release.yml
.mise/tasks/: build  ci  clean  download-test-assets  download-test-data  format  get-packages  lint  lint-fix  publish  select-package  setup  test  typecheck  upgrade
.mise/tasks/all/: build  check  clean  format  lint  test
.mise/tasks/changelog/: bump-version
.mise/tasks/package/: _default  build  check  clean  current  format  lint  lint-fix  list  publish  select  test  typecheck
.mise/tasks/pyproject/: bump-version
.mise/tasks/release/: build
.mise/tasks/test-assets/: download
.mise/tasks/test-settings/: delete  download  resolve_gcs_uri  upload
.mise/tasks/version/: update
docs/cheatsheets/: check_diff.md  create_pull_request.md  release_minor.md  update_root_and_meta_changelog.md
docs/concepts/implementation_optional_dependencies/: README.ja.md  README.md
docs/concepts/sensitive_data_security/: README.ja.md  README.md
docs/concepts/uv_workspace_operations/: README.ja.md  README.md
docs/knowledges/: about_kiarina.md  about_package_kiarina-currency.md  about_package_kiarina-i18n.md  about_package_kiarina-lib-anthropic.md  about_package_kiarina-lib-atlassian.md  about_package_kiarina-lib-cloudflare-auth.md  about_package_kiarina-lib-cloudflare-d1.md  about_package_kiarina-lib-cloudflare.md  about_package_kiarina-lib-falkordb.md  about_package_kiarina-lib-firebase-auth.md  about_package_kiarina-lib-firebase.md  about_package_kiarina-lib-google-auth.md  about_package_kiarina-lib-google-cloud-storage.md  about_package_kiarina-lib-google.md  about_package_kiarina-lib-openai.md  about_package_kiarina-lib-redis.md  about_package_kiarina-lib-redisearch.md  about_package_kiarina-llm.md  about_package_kiarina-utils-common.md  about_package_kiarina-utils-file.md  about_package_pydantic-settings-manager.md  about_project_kiarina-python.md  how_to_define_tasks.md  how_to_manage_knowledge.md  how_to_run_tree_command.md  how_to_structure_files_for_pytest.md  how_to_write_pull_request_title.md  rules_for_module_artchitecture.md  rules_for_package_root_readme.md  rules_for_pytest_tests.md  rules_for_uv_workspace_operations.md  security_policy_for_sensitive_data.md
docs/playbooks/: flow_of_development.md  flow_of_docs_managent.md
docs/playbooks/development_flow/: README.ja.md  README.md
docs/playbooks/external_service_tests/: README.ja.md  README.md
docs/playbooks/package_readme_structure/: README.ja.md  README.md
docs/playbooks/pytest_markers/: README.ja.md  README.md
docs/runbooks/: how_to_add_a_new_package_to_the_uv_workspace.md  how_to_release.md
docs/runbooks/add_new_package/: README.ja.md  README.md
docs/runbooks/release/: README.ja.md  README.md
docs/runbooks/test_settings/: README.ja.md  README.md
mise-tasks/: build  clean  default  format  get-packages  lint  lint-fix  setup  test  typecheck  update-changelog
mise-tasks/package/: _default  build  format  publish  test
tests/data/small/: i18n.yaml  id_title_content_embedding_3row_apple_car_dog.json  monthly_temperature_13row_141b.csv  query_embedding_tell_me_about_dogs_not_apples.json  simple_160b.html  user_list_5row_1kb.json
